crates/analyzer/tests/snapshots/errors__const_assign.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: invalid assignment target
  ┌─ compile_errors/const_assign.fe:5:9
  │
5 │         MODULE = 1
  │         ^^^^^^
  │
  = The left side of an assignment can be a variable name, attribute, subscript, or tuple.

error: cannot assign to a constant value
   ┌─ compile_errors/const_assign.fe:10:9
   │
10 │         LOCAL = 1
   │         ^^^^^
   │
   = The left side of an assignment can be a variable name, attribute, subscript, or tuple.


